@@ -19,6 +19,9 @@ dependencies {
 tasks.withType(Test).configureEach {
     systemProperty("h2.javaObjectSerializer", "h2.JdbcUtilsTest")
     systemProperty("h2.nioCleanerHack", "true")
+    jvmArgs(
+            "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+            "--add-opens", "java.base/jdk.internal.ref=ALL-UNNAMED")
 }
 
 graalvmNative {
